fix: fix the overlap of elements

--- a/src/components/Main/Cart/ClearCartBtn/ClearCartBtn.module.css
+++ b/src/components/Main/Cart/ClearCartBtn/ClearCartBtn.module.css
@@ -1,5 +1,5 @@
 .clear_cart_wrapper {
-  z-index: 3;
+  z-index: 4;
   position: relative;
   display: flex;
   justify-content: center;
